--- a/main.css
+++ b/main.css
@@ -1,3 +1,12 @@
 h1 {
-	font-family: monospace;	
+	font: 24px monospace;	
+}
+
+.icon {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  stroke-width: 0;
+  stroke: currentColor;
+  fill: currentColor;
 }
